fixed willWallConcedePoint, after it was bugging out. I think it's fixed, anyway. The weird bot behavior stopped showing up. Added toString to Chain and WallCoordinate.